##########################
# Setup.py Configuration #
##########################
[metadata]
name = bio2bel_creeds
version = attr: src.bio2bel_creeds.version.VERSION
description = A Bio2BEL package for CREEDS (CRowd Extracted Expression of Differential Signatures)
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/bio2bel/creeds
download_url = https://github.com/bio2bel/creeds/releases
project_urls =
    Bug Tracker = https://github.com/bio2bel/creeds/issues
    Source Code = https://github.com/bio2bel/creeds

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search information
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    Biological Expression Language
    Bio2BEL

[options]
install_requires =
    bio2bel
    bio2bel-hgnc
    bio2bel-rgd
    bio2bel-mgi
    pybel
    sqlalchemy
    tqdm
python_requires = >=3.6
packages = find:
package_dir =
    = src
zip-safe = false

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    bio2bel_creeds = bio2bel_creeds.cli:main
bio2bel =
    creeds = bio2bel_creeds

[options.packages.find]
where = src

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bio2bel_creeds

[coverage:paths]
source =
    src/bio2bel_creeds
    .tox/*/lib/python*/site-packages/bio2bel_creeds

[coverage:report]
show_missing = True
